--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,4 +1,9 @@
 FROM nvidia/cuda:12.3.0-runtime-ubuntu22.04
+
 COPY . /app
-RUN source /app/install.sh
-CMD python3 /app/run.sh
+
+RUN apt update
+RUN apt install -y python3 python3-pip
+RUN bash /app/install.sh
+
+CMD bash /app/run.sh
